@@ -141,9 +141,12 @@ consumer.setReceiveTimeout(5000);
 ====
 
 The `maxMessagesPerPoll` property specifies the maximum number of messages to receive within a given poll operation.
-This means that the poller continues calling receive() without waiting, until either `null` is returned or the maximum value is reached.
+This means that the poller continues calling `receive()` without waiting, until either `null` is returned or the maximum value is reached.
 For example, if a poller has a ten-second interval trigger and a `maxMessagesPerPoll` setting of `25`, and it is polling a channel that has 100 messages in its queue, all 100 messages can be retrieved within 40 seconds.
 It grabs 25, waits ten seconds, grabs the next 25, and so on.
+If `maxMessagesPerPoll` is configured for the negative value, then `receive()` is called withing a single polling cycle until it returns `null`.
+Starting with version 5.5, a `0` value has a special meaning - skip `receive()` call altogether, which may be treated as a pausing for this polling endpoint.
+The `maxMessagesPerPoll` can be changed to a different value later on, e.g. via Control Bus.
 
 The `receiveTimeout` property specifies the amount of time the poller should wait if no messages are available when it invokes the receive operation.
 For example, consider two options that seem similar on the surface but are actually quite different: The first has an interval trigger of 5 seconds and a receive timeout of 50 milliseconds, while the second has an interval trigger of 50 milliseconds and a receive timeout of 5 seconds.
